<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/refresh_24hour_time"
                    android:textColor="@android:color/white"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:background="#F1511B"
                    android:text="@string/refresh_12hour_time"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>


            <include
                android:id="@+id/sydTime"
                layout="@layout/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_the_button_to_update_the_time_for_sydney" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/hideSyd"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/hide_sydney"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/showSyd"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F1511B"
                    android:text="@string/show_sydney"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <include
                android:id="@+id/tokyoTime"
                layout="@layout/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_the_button_to_update_the_time_for_tokyo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/hideTok"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/hide_tokyo"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/showTok"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F1511B"
                    android:text="@string/show_tokyo"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <include
                android:id="@+id/shangTime"
                layout="@layout/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_the_button_to_update_the_time_for_shanghai" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/hideSha"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/hide_shanghai"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/showSha"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F1511B"
                    android:text="@string/show_shanghai"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <include
                android:id="@+id/yorkTime"
                layout="@layout/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_the_button_to_update_the_time_for_new_york" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/hideYork"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/hide_new_york"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/showYork"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F1511B"
                    android:text="@string/show_new_york"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <include
                android:id="@+id/egyptTime"
                layout="@layout/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/press_the_button_to_update_the_time_for_egypt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/hideEgy"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/hide_egypt"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/showEgy"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F1511B"
                    android:text="@string/show_egypt"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>